--- a/app/components/Header/Header.scss
+++ b/app/components/Header/Header.scss
@@ -41,7 +41,22 @@
 }
 
 .header--expanded {
-	top: 0
+	top: 0;
+	overflow: auto;
+	padding-top: 0;
+
+	.top-bar {
+		height: 52px;
+		padding-top: 15px;
+		position: relative;
+	}
+}
+
+.top-bar {
+	box-sizing: border-box;
+	height: 0;
+	position: absolute;
+	top: 0;
 }
 
 .header__home-link {
@@ -58,6 +73,10 @@
 	width: 100%;
 	z-index: 4;
 
+	@media (max-width: 350px) {
+		padding-left: 18px;
+	}
+
 	a {
 		cursor: pointer;
 	}
@@ -66,6 +85,11 @@
 	.header--expanded & {
 		display: block;
 	}
+
+	.header--fixed.header--expanded & {
+		position: static;
+	}
+
 
 	@media (min-width: $breakPointLarge) {
 		left: 30px;
